# demos-kafka-trade-aggregator

./: CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.github/: build-push-producer.yml
.github/workflows/: build-push-producer.yml
docs/: trade-aggregator.md
docs/superpowers/specs/: 2026-04-27-producer-env-vars-design.md
src/consumers/: .env  .env.example  app.py  config.py  connectors.py  consumer.py  main.py  publishers.py  pyproject.toml  tables.sql
src/consumers/agents/: __init__.py  db_writer.py  eviction.py  process.py  reader.py
src/consumers/utils/: redis_utils.py  time.py
src/producers/: .env  Dockerfile  producer.py  pyproject.toml
